@@ -2,6 +2,7 @@ Changes in 4.0:
 - Make adding multiple trackers at once possible (213194) 
 - Bandwidth scheduler can now be deactivated temporarely
 - Show information message instead of error when trackerlists are merged (213772)
+- Make it optional to intercept Qt debug messages in InitLog call
 
 Changes in 3.3.1:
 - Make sure exceptions in DHT code are caught, fixes a crash (213819)
